# iced-chess

./: Cargo.toml
examples/: chess_app.rs
src/: chess.rs  lib.rs  sound.rs  style.rs  widget.rs
src/opiece/: font.rs  mod.rs  pawn.rs
src/style/: chess_board.rs  game_buttons.rs
src/widget/: chess_board.rs  game_buttons.rs  helpers.rs
src/widget/chess_board/: overlay.rs  render.rs  sound.rs
